--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "cg_back"]
 	path = cg_back
 	url = https://github.com/Om3n31/cg_back.git
+	branch = master
 [submodule "cg_front"]
 	path = cg_front
 	url = https://github.com/Om3n31/cg_front.git
+	branch = master
