--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 	url = https://github.com/Om3n31/cg_front.git
 	branch = master
 [submodule "cg_engine"]
-	path = cg_front
+	path = cg_back/cg_engine
 	url = https://github.com/Om3n31/cg_engine.git
 	branch = master
